Quickfix for softlocking salvage screen

--- a/Settings.json
+++ b/Settings.json
@@ -1,4 +1,5 @@
 { "logLevel" : "Debug" 
 , "experimentalLazyRoomInitialization": true
 , "experimentalLoadFixes": true
+, "experimentalSalvageSoftlockFix" : true
 }
