Respect ApplySorting for better mod compatibility

--- a/BattletechPerformanceFix/Settings.json
+++ b/BattletechPerformanceFix/Settings.json
@@ -1,2 +1,5 @@
 { "logLevel" : "Debug" 
+, "experimentalLazyRoomInitialization": false
+, "experimentalLoadFixes": false
+, "experimentalSalvageSoftlockFix" : false
 }
