re-apply backed out damaged item fix

--- a/BattletechPerformanceFix/Settings.json
+++ b/BattletechPerformanceFix/Settings.json
@@ -1,5 +1,5 @@
 { "logLevel" : "Debug" 
 , "experimentalLazyRoomInitialization": false
 , "experimentalLoadFixes": false
-, "experimentalSalvageSoftlockFix" : false
+, "experimentalSalvageSoftlockFix" : true
 }
