--- a/source/BattletechPerformanceFix.csproj
+++ b/source/BattletechPerformanceFix.csproj
@@ -77,6 +77,7 @@
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="Control.cs" />
     <Compile Include="HarmonyExt.cs" />
+    <Compile Include="DataLoaderGetEntryCheck.cs" />
     <Compile Include="MissingAssetsContinueLoad.cs" />
     <Compile Include="NoSalvageSoftlock.cs" />
     <Compile Include="LazyRoomInitialization.cs" />
