Add InMemoryCache & disable HBS's external IP dump to logfile

--- a/BattletechPerformanceFix/Settings.json
+++ b/BattletechPerformanceFix/Settings.json
@@ -1,9 +1,12 @@
 {
   "logLevel": "Debug",
   "features": {
-    "LazyRoomInitialization": false,
     "LoadFixes": true,
     "NoSalvageSoftlock": true,
-    "MissingAssetsContinueLoad": true
+    "MissingAssetsContinueLoad": true,
+    "DynamicTagsFix": true,
+    "BTLightControllerThrottle": false,
+    "ShopTabLagFix": true,
+    "MDDB_InMemoryCache": false
   }
 }
