--- a/source/BattletechPerformanceFix.csproj
+++ b/source/BattletechPerformanceFix.csproj
@@ -54,6 +54,9 @@
       <HintPath>$(BTechData)Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Assembly-CSharp-firstpass">
+      <HintPath>..\..\..\BattleTech_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
+    </Reference>
     <Reference Include="Dapper.Unity">
       <HintPath>$(BTechData)Dapper.Unity.dll</HintPath>
     </Reference>
@@ -64,6 +67,10 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>$(BTechData)Newtonsoft.Json.dll</HintPath>
       <Private>False</Private>
+    </Reference>
+    <Reference Include="RSG.Promise, Version=3.0.1.0, Culture=neutral, PublicKeyToken=7019fe0722eef3a4, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\RSG.Promise.dll</HintPath>
     </Reference>
     <Reference Include="System">
       <HintPath>$(BTechData)System.dll</HintPath>
@@ -83,6 +90,9 @@
     <Reference Include="System.Data.SQLite.Linq, Version=1.0.109.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
       <HintPath>packages\System.Data.SQLite.Linq.1.0.109.0\lib\net20\System.Data.SQLite.Linq.dll</HintPath>
     </Reference>
+    <Reference Include="UniRx, Version=5.4.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\UniRx.5.4.1.0\lib\UniRx.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine">
       <HintPath>$(BTechData)UnityEngine.dll</HintPath>
       <Private>False</Private>
@@ -96,6 +106,7 @@
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="ContractLagFix.cs" />
     <Compile Include="DisableSensitiveDataLogDump.cs" />
+    <Compile Include="LoadResourceRemoveIntermediate.cs" />
     <Compile Include="MDDB_InMemoryCache.cs" />
     <Compile Include="Control.cs" />
     <Compile Include="BTLightControllerThrottle.cs" />
@@ -105,6 +116,8 @@
     <Compile Include="NoSalvageSoftlock.cs" />
     <Compile Include="LazyRoomInitialization.cs" />
     <Compile Include="LoadFixes.cs" />
+    <Compile Include="RemoveMDDB.cs" />
+    <Compile Include="ResolveDepsAsync.cs" />
     <Compile Include="ShopTabLagFix.cs" />
     <Compile Include="PatchMechLabLimitItems.cs" />
     <Compile Include="PatchMechLabPanelLoadThrottling.cs" />
