--- a/source/BattletechPerformanceFix.csproj
+++ b/source/BattletechPerformanceFix.csproj
@@ -57,6 +57,9 @@
     <Reference Include="Assembly-CSharp-firstpass">
       <HintPath>..\..\..\BattleTech_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
     </Reference>
+    <Reference Include="ShadowrunDTO">
+      <HintPath>..\..\..\BattleTech_Data\Managed\ShadowrunDTO.dll</HintPath>
+    </Reference>
     <Reference Include="Dapper.Unity">
       <HintPath>$(BTechData)Dapper.Unity.dll</HintPath>
     </Reference>
