--- a/source/BattletechPerformanceFix.csproj
+++ b/source/BattletechPerformanceFix.csproj
@@ -94,6 +94,7 @@
     <Compile Include="DisableSensitiveDataLogDump.cs" />
     <Compile Include="MDDB_InMemoryCache.cs" />
     <Compile Include="Control.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="BTLightControllerThrottle.cs" />
     <Compile Include="HarmonyExt.cs" />
     <Compile Include="DataLoaderGetEntryCheck.cs" />
