--- a/source/BattletechPerformanceFix.csproj
+++ b/source/BattletechPerformanceFix.csproj
@@ -105,6 +105,7 @@
     <Compile Include="DisableSensitiveDataLogDump.cs" />
     <Compile Include="EnableLoggingDuringLoads.cs" />
     <Compile Include="ImmediateAssetFallbackRecovery.cs" />
+    <Compile Include="LoadAllTheThings.cs" />
     <Compile Include="MDDB_InMemoryCache.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Extensions.cs" />
