--- a/source/BattletechPerformanceFix.csproj
+++ b/source/BattletechPerformanceFix.csproj
@@ -107,6 +107,7 @@
     <Compile Include="CollectSingletons.cs" />
     <Compile Include="ContractLagFix.cs" />
     <Compile Include="DisableSensitiveDataLogDump.cs" />
+    <Compile Include="DMPersist.cs" />
     <Compile Include="EnableLoggingDuringLoads.cs" />
     <Compile Include="ImmediateAssetFallbackRecovery.cs" />
     <Compile Include="LoadAllTheThings.cs" />
