--- a/source/BattletechPerformanceFix.csproj
+++ b/source/BattletechPerformanceFix.csproj
@@ -113,6 +113,7 @@
     <Compile Include="PatchMechLabPanelLoadThrottling.cs" />
     <Compile Include="DynamicTagsFix.cs" />
     <Compile Include="SimpleMetrics.cs" />
+    <Compile Include="EnableLoggingDuringLoads.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\mod.json" />
