Break all the things

--- a/source/BattletechPerformanceFix.csproj
+++ b/source/BattletechPerformanceFix.csproj
@@ -101,6 +101,7 @@
     <Compile Include="CollectSingletons.cs" />
     <Compile Include="ContractLagFix.cs" />
     <Compile Include="DisableSensitiveDataLogDump.cs" />
+    <Compile Include="DMFix.cs" />
     <Compile Include="LazyLoadAssets.cs" />
     <Compile Include="MDDB_InMemoryCache.cs" />
     <Compile Include="Main.cs" />
