--- a/source/BattletechPerformanceFix.csproj
+++ b/source/BattletechPerformanceFix.csproj
@@ -55,7 +55,7 @@
     </Reference>
     <Reference Include="Assembly-CSharp-firstpass, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\BattleTech_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
+      <HintPath>$(BTechData)Assembly-CSharp-firstpass.dll</HintPath>
     </Reference>
     <Reference Include="Dapper.Unity">
       <HintPath>$(BTechData)Dapper.Unity.dll</HintPath>
