Add DisableDeployAudio (4-5s faster load times)

--- a/source/BattletechPerformanceFix.csproj
+++ b/source/BattletechPerformanceFix.csproj
@@ -93,6 +93,7 @@
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="ContractLagFix.cs" />
     <Compile Include="DisableSensitiveDataLogDump.cs" />
+    <Compile Include="DisableDeployAudio.cs" />
     <Compile Include="ExtraLogging.cs" />
     <Compile Include="GhostBlipOverride.cs" />
     <Compile Include="Logging.cs" />
