Remove support for pre UW modded mechs. Minor change to support 1.8

--- a/source/BattletechPerformanceFix.csproj
+++ b/source/BattletechPerformanceFix.csproj
@@ -49,7 +49,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
-      <HintPath>../../Mods/ModTek/0Harmony.dll</HintPath>
+      <HintPath>$(BTechData)/0Harmony.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Assembly-CSharp">
@@ -104,7 +104,6 @@
     <Compile Include="DisableDeployAudio.cs" />
     <Compile Include="DisableSimAnimations.cs" />
     <Compile Include="ExtraLogging.cs" />
-    <Compile Include="GhostBlipOverride.cs" />
     <Compile Include="Logging.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Extensions.cs" />
